--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>com.quebic.apigateway</groupId>
 	<artifactId>api-gateway</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>tar</packaging>
+	<packaging>jar</packaging>
 
 	<name>api-gateway</name>
 	<url>http://maven.apache.org</url>
